# Velocity

./: .gitignore  CMakeLists.txt  README.md  ToDo.txt  example.cpp
legacy/: player.h
resources/: playerIdle.aseprite  playerReference.aseprite  playerRun.aseprite  playerSheet.aseprite
src/: animation.cpp  animation.h  input.cpp  input.h  level0.cpp  level0.h  main.cpp  mainCamera.cpp  mainCamera.h  menu.cpp  menu.h  player.cpp  player.h  playerAnimation.cpp  playerAnimation.h  playerCamera.cpp  playerCamera.h  sceeneManager.h  sceneManager.cpp  sceneManager.h
